seller CRUD ops complete
